<resources>
    <string name="app_name">MyPayments</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signed_out">Signed Out</string>
    <string name="coordinator">Account</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_account">Add Account</string>
    <string name="new_account_to_add">New Account to Add</string>
    <string name="error_title_min_characters">Minimum 3 Charectors Required</string>
    <string name="verify_invoice_number1">Enter invoice number for account</string>
    <string name="login">Login</string>
    <string-array name="steps_subtitles">
        <item>Account Number</item>
        <item>Invoice Number</item>
    </string-array>
    <string-array name="steps_titles">
        <item>Verify Account Number</item>
        <item>Verify Invoices</item>
    </string-array>

    <string name="login_button">Login</string>
    <string name="password_text_input">Password</string>
    <string name="username_text_input">Username</string>
    <string name="company_name">highradius</string>
    <string name="tab_title">Retrieving Account Information ...</string>
    <string name="progress_verify_invoices_title">Verifying Invoice Details...</string>
    <string name="tab_title_verify_invoices">Verify Invoices</string>
    <string name="tab_title_verify_account_number">Verify Account</string>
    <string name="preference_file_key">com.vatsalya.mypayments</string>
    <string name="saved_vendor_account_id">vendorAccountId</string>
    <string name="logged_in_user_id">loggedUserId</string>
    <string name="adding_account">Adding Account...</string>
    <string name="pick_file">Pick file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="deleting_account">Deleting Account</string>
</resources>
