<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/panoramic_houston_skyline">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/ic_highradius_logo"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginTop="30dp"
       >
        <!-- Name Label -->

            <EditText android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/first_name"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:layout_margin="6dp"
                android:textSize="18sp"/>

            <EditText android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/last_name"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:layout_margin="6dp"
                android:textSize="18sp"/>


        </LinearLayout>

        <!--  Phone Label -->

            <EditText android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:layout_margin="6dp"
                android:textSize="18sp"/>


        <!--  Email Label -->

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/rounded_corner"
                android:layout_margin="6dp"
                android:textSize="18sp"/>


        <!-- Password Label -->

            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/rounded_corner"
                android:layout_margin="6dp"
                android:textSize="18sp"/>


        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:background="@drawable/rounded_corner"
            android:layout_margin="6dp"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_margin="6dp"
            />

    </LinearLayout>
</ScrollView>